--- a/i18n/resources/ta/common.json
+++ b/i18n/resources/ta/common.json
@@ -236,5 +236,229 @@
     "error_number_invalid": "தவறான எண்.",
     "save": "சேமி",
     "cancel": "ரத்து"
+  },
+  "badges": {
+    "badges": {
+      "title": "பதக்கங்கள் & பரிசுகள்",
+      "tabs": {
+        "badge": "பதக்கங்கள்",
+        "rewards": "பரிசுகள்"
+      },
+      "stats": {
+        "badges": "பதக்கங்கள்",
+        "points": "புள்ளிகள்"
+      },
+      "modal": {
+        "share": "பகிர்",
+        "close": "மூடு",
+        "locked_msg": "கிட்டத்தட்ட முடிந்துவிட்டது — “{{desc}}” செய்து திறக்கவும்.",
+        "unlocked_msg": "அற்புத முன்னேற்றம்! நீங்கள் “{{desc}}” சிறப்பாக செய்துள்ளீர்கள்!"
+      }
+    },
+    "sort": "வரிசைப்படுத்து:",
+    "sortOptions": {
+      "default": "இயல்புநிலை",
+      "unlocked": "திறந்தவை முன்னுரிமை",
+      "locked": "பூட்டியவை முன்னுரிமை"
+    },
+    "templates": {
+      "quiz": {
+        "title_first": "முதல் வினாடி வினா",
+        "title_many": "அறிவியல் தேடுபவர்",
+        "desc_first": "உங்கள் முதல் வினாடி வினாவை முடிக்கவும்",
+        "desc_many": "{{count}} வினாடி வினாக்களை முடிக்கவும்"
+      },
+      "perfect": {
+        "title_first": "சரியானவன்",
+        "title_many": "நிலையான மதிப்பெண்",
+        "desc_first": "ஒரு வினாடி வினாவில் முழு மதிப்பெண் பெறவும்",
+        "desc_many": "{{count}} முழு மதிப்பெண்களைப் பெறவும்"
+      },
+      "daily": {
+        "title_first": "தினசரி சவால்வாதி",
+        "title_many": "தினசரி போராளி",
+        "desc_many": "{{count}} தினசரி சவால்களை முடிக்கவும்"
+      },
+      "xp": {
+        "title": "XP சேகரிப்பவர்",
+        "desc": "மொத்தம் {{count}} XP ஐ சம்பாதிக்கவும்"
+      },
+      "fast": {
+        "title_first": "வேகமான கற்றவர்",
+        "title_many": "வேக வீரர்",
+        "desc_first": "1 நிமிடத்திற்குள் ஒரு வினாடி வினாவை முடிக்கவும்",
+        "desc_many": "1 நிமிடத்திற்குள் {{count}} வினாடி வினாக்களை முடிக்கவும்"
+      },
+      "streak": {
+        "title_first": "நல்ல முன்னேற்றம்",
+        "title_many": "தொடர் சாதனையாளர்",
+        "desc": "{{count}} நாள் தொடர்ச்சி"
+      }
+    },
+    "points_suffix": "புள்ளிகள்",
+    "share": {
+      "title": "திறந்தது: {{title}}",
+      "message": "நான் இப்போதுதான் \"{{title}}\" பதக்கத்தைத் திறந்தேன்! {{desc}}"
+    }
+  },
+
+  "rewards": {
+    "sortOptions": {
+      "default": "இயல்புநிலை",
+      "price ↑": "விலை ↑",
+      "price ↓": "விலை ↓"
+    },
+    "includes": "இதில் அடங்கும்:",
+    "points_required": "தேவையான மதிப்பெண்கள்",
+    "redeem_now": "உடனே பெற்றுக்கொள்ளவும்",
+    "modal": {
+      "success": {
+        "title": "வெற்றிகரமாக பெறப்பட்டது!",
+        "msg": "உங்கள் இருப்பில் இருந்து {{price}} மதிப்பெண்கள் கழிக்கப்பட்டது."
+      },
+      "insufficient": {
+        "title": "மதிப்பெண்கள் போதவில்லை",
+        "msg": "உங்களுக்கு {{need}} மதிப்பெண்கள் தேவை; ஆனால் உங்களிடம் {{have}} மட்டுமே உள்ளது."
+      },
+      "error": {
+        "title": "ஏதோ தவறு நடந்தது",
+        "msg": "சற்று நேரத்தில் மீண்டும் முயற்சிக்கவும்."
+      },
+      "done": "முடிந்தது",
+      "close": "மூடு"
+    },
+    "catalog": {
+      "r1": {
+        "title": "சிறிய முதலுதவி பெட்டி",
+        "desc": "சிறியதும் எளிதாக எடுத்துச் செல்லக்கூடியதும். தினசரி அவசர நிலைகளுக்கு தயார் நிலையில் இருக்கப் பையில் எளிதாக பொருந்தும்.",
+        "longDesc": "பல விருதுகளை பெற்ற இந்த சிறிய முதலுதவி பெட்டி குடும்பங்களுக்காகவே வடிவமைக்கப்பட்டுள்ளது. குழந்தைகள் பை, கார் க்ளோவ்பாக்ஸ், பேக்பேக் அல்லது வீட்டில் எளிதாக வைத்துக் கொள்ளலாம். மருத்துவர்களால் பரிந்துரைக்கப்பட்ட முக்கிய பொருட்கள் இதில் உள்ளன—சிறிய காயங்களை சுத்தம் செய்து, மூடி பாதுகாப்பதற்கும், எரிப்பு சிகிச்சைக்கும், சிறிய முறிவு பராமரிப்புக்கும் உதவும். ஒரு விரைவான வழிகாட்டும் புத்தகம் உங்களை நம்பிக்கையுடன் செயல்பட உதவுகிறது.",
+        "details": [
+          "2 × ஒட்டாத காயத் திண்டுகள்",
+          "2 × கவரும் கட்டுப்பட்டிகள்",
+          "1 × அறுவை சிகிச்சை கத்தரி (வட்ட முனை, மருத்துவர்கள் பரிந்துரைத்தது)",
+          "1 × ஒட்டும் டேப் உருளை",
+          "2 × எரிப்பு ஜெல் பைகள்",
+          "20 × குழந்தைகளுக்கான நீர்ப்புகா பிளாஸ்டர்கள்",
+          "20 × வடிவமைப்பு இல்லாத நீர்ப்புகா பிளாஸ்டர்கள், 7cm × 2cm",
+          "4 × முழங்கை / முழங்கால் பிளாஸ்டர்கள்",
+          "4 × மது இல்லாத துடைப்பான்",
+          "1 × உலோகப் பிளக்கு",
+          "6 × பாதுகாப்புக் குத்திகள்",
+          "1 × தகவல் சிற்றேடு (முதலுதவி விரைவு கையேடு)",
+          "10 × துணிச்சல் ஸ்டிக்கர்கள்",
+          "நீர் எதிர்ப்பு ஜிப்பர் பை, 16 × 12 × 5 cm"
+        ]
+      },
+
+      "r2": {
+        "title": "அவசர விசில் & டார்ச்",
+        "desc": "120 dB மின்னணு விசில், LED விளக்கு உடன், அவசர சைகைக்கு பயன்படும்.",
+        "longDesc": "கேட்கப்பட்டும், பார்க்கப்பட்டும் இருங்கள். 120 dB வரை ஒலி உண்டாக்கும் இந்த கையற்ற மின்னணு விசில், சாதாரண விசிலைவிட மிகவும் சத்தமாக இருக்கும். குறைந்த ஒளி சூழலில் சைகை செய்ய LED விளக்கு உதவுகிறது. அவசரநிலைகள், வெளிப்புறச் செயல்பாடுகள், கூட்டக் கட்டுப்பாடு அல்லது இரவுச் சாயலில் நடப்பதற்கு சிறந்தது. USB மூலம் சார்ஜ் செய்யக்கூடியது, எளிதில் பயன்படுத்தக்கூடியதும் நம்பகமானதும் ஆகும்.",
+        "details": [
+          "LED விளக்கு உடன் மின்னணு விசில் உடல் (120 dB வரை)",
+          "3 விசில் ஒலிகள் மற்றும் 3 ஒலி நிலைகள்",
+          "விளக்கு நிலைகள்: அதிகம் / குறைவாக / ஸ்ட்ரோப்",
+          "மீண்டும் சார்ஜ் செய்யக்கூடிய லி-அயான் பேட்டரி (≈300mAh), முழுச் சார்ஜ் ≈1.5–2 மணி",
+          "பயன்பாட்டு நேரம்: ≈2 மணி சைரன் / ≈3–4 மணி விளக்கு (முறையைப் பொறுத்து)",
+          "USB சார்ஜ் கேபிள்",
+          "கைப்பட்டை & பெல்ட் கிளிப் பை",
+          "IPX4 துளி எதிர்ப்பு வடிவமைப்பு",
+          "எடை ≈60g; சுருக்கமான அளவு 13 × 3 × 3 cm",
+          "பயனர் விரைவுக் கையேடு"
+        ]
+      },
+
+      "r3": {
+        "title": "மறுபயன்படுத்தக்கூடிய முகமூடிகள்",
+        "desc": "PM2.5 வடிகட்டிகள் மற்றும் சரிசெய்யக்கூடிய பொருத்தத்துடன் கழுவக்கூடிய பெரியவர்களின் முகமூடி.",
+        "longDesc": "இந்த வசதியான மறுபயன்பாட்டு முகமூடி, தினசரி பயன்பாடு, புகைமூட்டம் காலம், காய்ச்சல் பருவம் அல்லது பயணங்களுக்குப் பொருத்தமானது. மென்மையான துணி தோலில் நன்றாக உணர்த்தும், மேலும் சரிசெய்யக்கூடிய காதுப் பட்டைகள் மற்றும் மடிக்கக்கூடிய மூக்கு பட்டை வசதியான பொருத்தத்தை வழங்கும். PM2.5 செயலில் கார்பன் வடிகட்டிகள் தூசி நிறைந்த சூழலில் கூடுதல் பாதுகாப்பை வழங்கும்.",
+        "details": [
+          "1 × மறுபயன்பாட்டு பெரியவர் முகமூடி (3 அடுக்கு பருத்தி/பாலி கலவை)",
+          "2 × PM2.5 செயலில் கார்பன் வடிகட்டிகள் (மாற்றக்கூடியது)",
+          "வசதியான பொருத்தத்திற்கான சரிசெய்யக்கூடிய காதுப் பட்டைகள்",
+          "மூக்கு பட்டை மூடுதலை மேம்படுத்தவும், கண்ணாடி புகை குறைக்கவும் உதவுகிறது",
+          "கழுவக்கூடியது; கழுவுவதற்கு முன் வடிகட்டியை நீக்க பரிந்துரைக்கப்படுகிறது",
+          "வடிகட்டியை மாற்ற பரிந்துரைக்கப்படும் காலம்: 3–7 நாட்கள் பயன்பாடு (சூழலைப் பொறுத்து)",
+          "மறுபயன்பாட்டுக்கான மீள்சூடு பை",
+          "ஒரே அளவு, பெரும்பாலான பெரியவர்களுக்கு பொருந்தும்"
+        ]
+      },
+
+      "r4": {
+        "title": "அவசர தண்ணீர் பாக்கெட்",
+        "desc": "UHT கிருமி நீக்கப்பட்ட தண்ணீர் அலுமினிய பைகளில், 5 வருட காலம் வரை சேமிக்கலாம்.",
+        "longDesc": "சுத்தமான குடிநீர் ஒரு பேரழிவுக்குப் பிறகு மிகவும் முக்கியமானது. தனித்தனி மூடப்பட்ட அலுமினிய பைகள் எளிதில் பகிரப்படக்கூடியது, எடை குறைவானது, மேலும் ஒளி மற்றும் மாசுபாட்டிலிருந்து பாதுகாக்கப்பட்டுள்ளது. வீடுகள், கார்கள் அல்லது அலுவலகங்களில் அவசரநிலை கையிருப்பு நீரை பராமரிக்க சிறந்த தேர்வு.",
+        "details": [
+          "62 × 125ml அலுமினிய பைகள் (மொத்தம் ≈7.75L)",
+          "UHT (அதிக வெப்பம்) கிருமி நீக்கம் செய்யப்பட்ட தண்ணீர்",
+          "5 வருட சேமிப்பு காலம் (குளிர்ச்சியான, உலர்ந்த இடத்தில் சேமிக்கவும்)",
+          "வெப்பம் மூடிய, எளிதில் கிழிக்கக்கூடிய வடிவமைப்பு; பாட்டில் திறப்பான் தேவையில்லை",
+          "அவசரப்பை அல்லது கார் கிட்-க்கு பொருத்தமான அளவு; வீணாக்கத்தைத் தடுக்க கட்டுப்பட்ட அளவு",
+          "வெளிப்புறப் பேக்கேஜில் காலாவதி தேதி அச்சிடப்பட்டுள்ளது",
+          "பொதுவான அவசர நிவாரண பாக்கேஜிங் தரநிலைகளை பூர்த்தி செய்கிறது",
+          "அவசர பயன்பாட்டிற்கும் குறுகிய கால நீர்ப்பாசர்வத்திற்கும் உகந்தது"
+        ]
+      },
+
+      "r5": {
+        "title": "அவசர போர்வை",
+        "desc": "குளிர், காற்று அல்லது மழையில் உடல் வெப்பத்தை தக்கவைக்கும் பிரதிபலிப்பு வெப்ப போர்வை.",
+        "longDesc": "இந்த எளிதான மைலர் அவசர போர்வை உடல் வெப்பத்தின் 90% வரை பிரதிபலிக்கிறது, இது ஹைப்போத்தெர்மியாவைத் தடுப்பதற்கு உதவுகிறது. இதைப் போர்வையாக, தற்காலிக இருப்பிடமாக, தரை சீட்டாக, மழைக்காப்பாக அல்லது அவசர சைகை சாதனமாகப் பயன்படுத்தலாம். சிறிய அளவு, எளிதில் எடுத்துச் செல்லக்கூடியது—மலை ஏறுபவர்கள், கார்கள் மற்றும் வீட்டு அவசர சேமிப்புக்கு சிறந்தது.",
+        "details": [
+          "1 × வெப்ப அவசர போர்வை (±210 × 130 cm)",
+          "மைலர் மேற்பரப்பு—உடல் வெப்பத்தின் 90% வரை தக்கவைக்கும்",
+          "நீர் மற்றும் காற்று எதிர்ப்பு; மழை மற்றும் தெளிவைத் தடுக்கிறது",
+          "அவசர சிக்னலுக்கான உயர்தர பிரதிபலிப்பு மேற்பரப்பு",
+          "சரியாக கையாளப்பட்டால் மறுபயன்படுத்தக்கூடியது; கிழிவைத் தடுக்கும் பொருள்",
+          "மடிக்கக்கூடிய அளவு ≈12 × 8 × 2 cm; எடை ≈55g",
+          "பல்வேறு பயன்பாடுகள்: போர்வை, இருப்பிட மூடி, தரை சீட்டு, பொன்சோ அல்லது சிக்னல் பேனல்"
+        ]
+      },
+
+      "don-src-1": {
+        "title": "$1 நன்கொடை - சிவப்பு சிலுவை",
+        "desc": "அவசர உதவி முயற்சிகளுக்கு ஆதரவளிக்கவும்.",
+        "longDesc": "உங்கள் புள்ளிகளைச் சிறிய நன்கொடையாக மாற்றவும். இந்த $1 நன்கொடை பேரழிவு மீட்பு, முதலுதவி பயிற்சி, இரத்த சேவை மற்றும் சமூக திட்டங்களுக்கு நிதியளிக்கிறது. இது பள்ளித் திட்டத்தின் ஒரு சோதனை—எந்தவித உண்மையான பணமும் பரிமாறப்படவில்லை.",
+        "details": [
+          "எந்தவொரு பொருளும் அனுப்பப்படாது",
+          "பயன்பாட்டில் ஆதரவு உறுதிப்படுத்தப்படும் (டெமோ மட்டும்)",
+          "வரி கழிப்பிற்கு தகுதியற்றது; கல்வி நோக்கங்களுக்கான விளக்கம்",
+          "புள்ளிகள் எவ்வாறு உண்மையான தாக்கத்தை ஏற்படுத்த முடியும் என்பதை காட்டுகிறது"
+        ]
+      },
+      "don-scdf-1": {
+        "title": "$1 நன்கொடை - SCDF சமூக திட்டம்",
+        "desc": "உள்ளூர் அவசர முன்னெச்சரிக்கை திட்டங்களை ஆதரிக்கவும்.",
+        "longDesc": "உங்கள் புள்ளிகளை சமூகத் தயார்நிலை முயற்சிகளை ஆதரிக்கப் பயன்படுத்துங்கள்—CPR/AED பயிற்சி, CERT விழிப்புணர்வு, மற்றும் அவசர பதில் கல்வி. இது ஒரு சோதனை மட்டுமே, எந்தவித உண்மையான நிதியும் மாற்றப்படவில்லை.",
+        "details": [
+          "எந்தவொரு பொருளும் அனுப்பப்படாது",
+          "பயன்பாட்டில் ஆதரவு உறுதிப்படுத்தப்படும் (டெமோ மட்டும்)",
+          "வரி கழிப்பிற்கு தகுதியற்றது; கல்வி நோக்கங்களுக்கான விளக்கம்",
+          "சமூக விழிப்புணர்வு மற்றும் தன்னார்வத்தினை ஊக்குவிக்கிறது"
+        ]
+      },
+      "don-src-5": {
+        "title": "$5 நன்கொடை - சிவப்பு சிலுவை",
+        "desc": "அவசர உதவி முயற்சிகளுக்கு ஆதரவளிக்கவும்.",
+        "longDesc": "உங்கள் புள்ளிகளை அதிகரித்து, $5 நன்கொடையாக மாற்றி, அதிக தாக்கத்தை ஏற்படுத்துங்கள். உண்மையான பயன்பாட்டில், இது மீட்பு பொருட்கள், தன்னார்வ பயிற்சிகள் மற்றும் பேரழிவு பிந்தைய மீட்புகளை ஆதரிக்க உதவும். இது பள்ளி திட்டத்தின் ஒரு சோதனை—உண்மையான பண பரிமாற்றம் நடைபெறவில்லை.",
+        "details": [
+          "எந்தவொரு பொருளும் அனுப்பப்படாது",
+          "பயன்பாட்டில் ஆதரவு உறுதிப்படுத்தப்படும் (டெமோ மட்டும்)",
+          "வரி கழிப்பிற்கு தகுதியற்றது; கல்வி நோக்கங்களுக்கான விளக்கம்",
+          "அதிக புள்ளிகள் அதிக தாக்கத்தை ஏற்படுத்தக் கூடியதை காட்டுகிறது"
+        ]
+      },
+      "don-scdf-5": {
+        "title": "$5 நன்கொடை - SCDF சமூக திட்டம்",
+        "desc": "உள்ளூர் அவசர முன்னெச்சரிக்கை திட்டங்களை ஆதரிக்கவும்.",
+        "longDesc": "உங்கள் புள்ளிகளை ஒரு பெரிய சின்னமாக மாற்றி, சமூக தயார்நிலை மற்றும் பேரிடர் எதிர்ப்பு திறனை ஆதரிக்கவும். இது பள்ளித் திட்டத்தின் ஒரு சோதனை—எந்தவித உண்மையான நிதியும் பரிமாறப்படவில்லை.",
+        "details": [
+          "எந்தவொரு பொருளும் அனுப்பப்படாது",
+          "பயன்பாட்டில் ஆதரவு உறுதிப்படுத்தப்படும் (டெமோ மட்டும்)",
+          "வரி கழிப்பிற்கு தகுதியற்றது; கல்வி நோக்கங்களுக்கான விளக்கம்",
+          "விசுவாச புள்ளிகள் சமூக தயார்நிலையை மேம்படுத்த உதவுவதை காட்டுகிறது"
+        ]
+      }
+    }
   }
 }
