--- a/i18n/resources/zh/common.json
+++ b/i18n/resources/zh/common.json
@@ -215,5 +215,224 @@
     "error_number_invalid": "无效的电话号码。",
     "save": "保存",
     "cancel": "取消"
+  },
+  "badges": {
+    "title": "徽章与奖励",
+    "tabs": {
+      "badge": "徽章",
+      "rewards": "奖励"
+    },
+    "stats": {
+      "badges": "徽章",
+      "points": "积分"
+    },
+    "modal": {
+      "share": "分享",
+      "close": "关闭",
+      "locked_msg": "快成功了——完成“{{desc}}”即可解锁。",
+      "unlocked_msg": "进步惊人！你已经像高手一样“{{desc}}”啦！"
+    },
+    "sort": "排序：",
+    "sortOptions": {
+      "default": "默认",
+      "unlocked": "已解锁优先",
+      "locked": "未解锁优先"
+    },
+    "templates": {
+      "quiz": {
+        "title_first": "第一份测验",
+        "title_many": "求知者",
+        "desc_first": "完成你的第一份测验",
+        "desc_many": "完成 {{count}} 份测验"
+      },
+      "perfect": {
+        "title_first": "完美主义者",
+        "title_many": "稳定满分",
+        "desc_first": "获得一次满分",
+        "desc_many": "获得 {{count}} 次满分"
+      },
+      "daily": {
+        "title_first": "每日挑战者",
+        "title_many": "每日坚持者",
+        "desc_many": "完成 {{count}} 次每日挑战"
+      },
+      "xp": {
+        "title": "经验值收集者",
+        "desc": "累计获得 {{count}} XP"
+      },
+      "fast": {
+        "title_first": "快速学习者",
+        "title_many": "极速达人",
+        "desc_first": "在 1 分钟内完成一份测验",
+        "desc_many": "在 1 分钟内完成 {{count}} 份测验"
+      },
+      "streak": {
+        "title_first": "状态正佳",
+        "title_many": "连续记录者",
+        "desc": "{{count}} 天连续"
+      }
+    },
+    "points_suffix": "积分",
+    "share": {
+      "title": "已解锁：{{title}}",
+      "message": "我刚刚解锁了“{{title}}”徽章！{{desc}}"
+    }
+  },
+
+  "rewards": {
+    "sortOptions": {
+      "default": "默认",
+      "price ↑": "价格 ↑",
+      "price ↓": "价格 ↓"
+    },
+    "includes": "包含：",
+    "points_required": "所需积分",
+    "redeem_now": "立即兑换",
+    "modal": {
+      "success": {
+        "title": "兑换成功！",
+        "msg": "已从你的余额扣除 {{price}} 积分。"
+      },
+      "insufficient": {
+        "title": "积分不足",
+        "msg": "需要 {{need}} 积分，你只有 {{have}}。"
+      },
+      "error": { "title": "出错了", "msg": "请稍后再试。" },
+      "done": "完成",
+      "close": "关闭"
+    },
+    "catalog": {
+      "r1": {
+        "title": "迷你急救包",
+        "desc": "小巧便携，可放入包中，随时做好准备。",
+        "longDesc": "屡获殊荣的迷你急救品牌为家庭特别设计的急救包。体积小巧，非常适合放在婴儿包、背包、汽车手套箱或家中。内含由专业急救人员推荐的核心物品，可用于清洁、包扎和保护轻微伤口，缓解烧伤，并支撑轻度扭伤，直到进一步就医。附带的快速参考指南可帮助你更有信心地应对紧急情况。",
+        "details": [
+          "2 × 低黏性伤口垫",
+          "2 × 弹性绷带",
+          "1 × 医用剪刀（圆头，急救员推荐）",
+          "1 × 胶带卷",
+          "2 × 烧伤冷凝胶",
+          "20 × 儿童防水创可贴",
+          "20 × 无印防水创可贴，7cm × 2cm",
+          "4 × 肘部/膝盖创可贴",
+          "4 × 无酒精消毒湿巾",
+          "1 × 金属镊子",
+          "6 × 安全别针",
+          "1 × 急救信息小册子（快速指南）",
+          "10 × 勇敢贴纸",
+          "防水拉链软包，16 × 12 × 5 cm"
+        ]
+      },
+
+      "r2": {
+        "title": "紧急求生哨与手电筒",
+        "desc": "120分贝电子哨，内置LED照明，可用于紧急信号。",
+        "longDesc": "保持可见与可闻。这款卫生、免吹的电子哨音量高达120分贝，比普通口哨响得多，内置LED照明在低光环境中也能发出信号。非常适合用于紧急情况、户外活动、人群管理或夜间行走。可通过USB充电，设计简洁，可靠性高，关键时刻派得上用场。",
+        "details": [
+          "电子哨主体，内置LED手电筒（高达120分贝）",
+          "3种哨音与3档音量调节",
+          "手电筒模式：强光 / 弱光 / 闪烁",
+          "可充电锂离子电池（≈300mAh），1.5–2小时充满",
+          "续航：警报约2小时 / 手电约3–4小时（取决于模式）",
+          "USB充电线",
+          "腕带与腰夹收纳袋",
+          "IPX4防泼水外壳",
+          "重量≈60g；小巧尺寸13 × 3 × 3 cm",
+          "用户快速上手指南"
+        ]
+      },
+
+      "r3": {
+        "title": "可重复使用口罩",
+        "desc": "可清洗成人口罩，带PM2.5滤芯与可调节设计。",
+        "longDesc": "舒适的可重复使用口罩，适合日常使用，适用于雾霾、流感季节或旅行。柔软亲肤面料佩戴舒适，可塑形鼻梁条与可调节耳挂，减少起雾并提升贴合度。PM2.5活性炭滤芯提供额外防护，适合多尘通勤或人多场所。",
+        "details": [
+          "1 × 可重复使用成人口罩（三层棉/聚酯混纺）",
+          "2 × PM2.5活性炭滤芯（可更换）",
+          "可调节耳挂，佩戴舒适",
+          "可塑形鼻梁条，提升密封性并减少眼镜起雾",
+          "可清洗；建议清洗前取下滤芯",
+          "滤芯更换频率：约3–7天（依使用情况而定）",
+          "可封口收纳袋，便于随身携带",
+          "均码，适合大多数成年人"
+        ]
+      },
+
+      "r4": {
+        "title": "应急饮用水袋",
+        "desc": "UHT灭菌饮用水铝箔袋装，保质期5年。",
+        "longDesc": "灾后，干净饮用水是第一优先。这些独立密封的铝箔袋设计便于配发，易于存储，并有效隔绝光线与污染物。非常适合存放在家中、汽车或办公室，以便轻松维护基础应急储备。",
+        "details": [
+          "62 × 125ml铝箔袋（总量≈7.75L）",
+          "UHT超高温灭菌工艺",
+          "5年保质期（存放在阴凉干燥处）",
+          "热封封口，易撕设计；无需开瓶器",
+          "适合应急背包或汽车工具箱；定量包装减少浪费",
+          "外包装印有生产批次与有效期",
+          "符合常见应急救援包装标准",
+          "仅供紧急使用及短期补水"
+        ]
+      },
+
+      "r5": {
+        "title": "生存应急毯",
+        "desc": "反射型保温毯，在寒冷、风雨中保持体温。",
+        "longDesc": "轻巧的Mylar材质应急毯，可反射高达90%的体热，帮助预防低体温症。可用作披盖物、临时庇护所、地垫、防雨罩或求救信号工具。小巧易携，适合徒步背包、车辆及家庭应急抽屉。",
+        "details": [
+          "1 × 保温应急毯（约210 × 130 cm）",
+          "反射型Mylar表面—可保持高达90%体热",
+          "防水防风，有效阻挡雨水与飞溅",
+          "高反光表面，可用于求救信号",
+          "在温和使用下可重复使用；抗撕裂材料",
+          "折叠收纳尺寸≈12 × 8 × 2 cm；重量≈55g",
+          "多用途：披盖、遮棚、地垫、雨披或求救旗帜"
+        ]
+      },
+
+      "don-src-1": {
+        "title": "捐赠1美元给红十字会",
+        "desc": "支持紧急救援工作。",
+        "longDesc": "使用积分兑换小额慈善捐赠。您的1美元等值捐款将帮助资助灾害救援、急救培训、献血服务与社区项目。此为学校项目演示，不涉及真实资金转移。",
+        "details": [
+          "不寄送任何实体物品",
+          "应用内会显示支持确认（仅限演示）",
+          "不具备税收减免资格，仅作教学演示",
+          "帮助展示积分如何转化为现实影响"
+        ]
+      },
+      "don-scdf-1": {
+        "title": "捐赠1美元给SCDF社区计划",
+        "desc": "支持本地紧急应对与防灾教育项目。",
+        "longDesc": "将您的积分用于支持社区应急准备，包括心肺复苏/自动体外除颤器(CPR/AED)培训、CERT外展和公众紧急响应教育。此为演示项目，不涉及真实资金转移。",
+        "details": [
+          "不寄送任何实体物品",
+          "应用内会显示支持确认（仅限演示）",
+          "不具备税收减免资格，仅作教学演示",
+          "鼓励公众积极参与应急准备与志愿服务"
+        ]
+      },
+      "don-src-5": {
+        "title": "捐赠5美元给红十字会",
+        "desc": "支持紧急救援工作。",
+        "longDesc": "通过兑换更多积分，您的5美元等值捐款可以带来更大影响。在真实应用中，这将帮助维持救援物资、志愿者培训与灾后重建。此为学校项目演示，不涉及真实资金转移。",
+        "details": [
+          "不寄送任何实体物品",
+          "应用内会显示支持确认（仅限演示）",
+          "不具备税收减免资格，仅作教学演示",
+          "展示如何通过更高积分实现更大影响力"
+        ]
+      },
+      "don-scdf-5": {
+        "title": "捐赠5美元给SCDF社区计划",
+        "desc": "支持本地紧急应对与防灾教育项目。",
+        "longDesc": "将更多积分转化为更大贡献，支持社区应急准备与韧性建设。此为学校项目演示，不涉及真实资金转移。",
+        "details": [
+          "不寄送任何实体物品",
+          "应用内会显示支持确认（仅限演示）",
+          "不具备税收减免资格，仅作教学演示",
+          "展示积分如何推动防灾意识与公共准备"
+        ]
+      }
+    }
   }
 }
